# terminus

./: README.md  dev_notes.md  pyproject.toml  requirements.txt
src/framework/: __init__.py  app.py
src/terminus/: __init__.py  api.py  constants.py  execution_pipeline.py  request_factory.py  response.py  router.py  types.py
src/terminus/middleware/: __init__.py  identifier.py  ip_filter.py  logger.py
src/terminus/tests/: test_cookies.py  test_fn_returns.py  test_ip_filter.py  test_middleware.py  test_req.py  test_routing.py  test_simple.py  types.py  utils.py
src/terminus/tests/middleware/: test_identifier.py  test_ip_filter.py  test_logger.py  test_middleware.py
