[project]
name = "terminus"
version = "0.1.0"
description = "A clean and intuitive backend web framework for Python implemented on top of WSGI and Gunicorn"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "William Millet"}
]

[project.urls]
Repository = "https://github.com/WilliamMillet/terminus"