[project]
name = "terminus"
version = "0.1.0"
description = "A clean and intuitive backend web framework for Python implemented on top of WSGI and Gunicorn"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "William Millet"}
]

[project.urls]
Repository = "https://github.com/WilliamMillet/terminus"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E731", "B904", "SIM108"]
extend-select = [
  "E501",  # line length
  "I",     # import sorting
  "UP",    # pyupgrade
  "B",     # bugbear
  "SIM",   # simplify
  "C4",    # comprehensions
  "PIE",   # flake8-pie
  "RUF",   # ruff-specific
]